# stm32f429-disc1-projects

./: CMakeLists.txt  README.md
.github/workflows/: docker-full-build-ubuntu.yml
app/inc/: main.h  stm32f4xx_conf.h  stm32f4xx_init.h  stm32f4xx_it.h  usr_btn.h  usr_console.h  usr_lcd.h  usr_led.h
app/src/: main.c  stm32f4xx_init.c  stm32f4xx_it.c  usr_btn.c  usr_console.c  usr_lcd.c  usr_led.c
docker/: build.sh  run.sh
drivers/stm32f4xx/inc/: stm32f4xx.h
tools/: download.sh  openocd.cfg
utils/inc/: util_clk.h  util_gpio.h  util_int.h  util_sw_pwm.h  util_uart.h
utils/src/: util_clk.c  util_gpio.c  util_int.c  util_sw_pwm.c  util_uart.c
